fix tables in product modal on mobile / tablet

--- a/src/screens/ProductsPage/components/ProductForm/styles.scss
+++ b/src/screens/ProductsPage/components/ProductForm/styles.scss
@@ -100,7 +100,7 @@
   .ant-table {
 
     &-container {
-      overflow-x: auto;
+      //overflow-x: auto;
     }
 
     &-content {
